With CheckStyle bundler
Bug fix in PMD bundler